tests/NormalTests/paczka1/fuzzy1/59524410.err
Error in line 1: ZbIm7bhS S446 47,9
Error in line 3: ZbIm7bhS S94
Error in line 4:  1,5
Error in line 8: Zq0 S940 86,9
Error in line 2: ZbIm7bhS S940 1,4
Error in line 19: Oqa S940 84,0
Error in line 11: Zq0 A738 81,1
